fix: remove weird scrollbars

--- a/app/assets/stylesheets/application/components/_site_content.scss
+++ b/app/assets/stylesheets/application/components/_site_content.scss
@@ -6,7 +6,6 @@
 }
 
 .siteContent__main {
-  @include scrollbars(12px);
   flex: 1 1 auto;
   z-index:100;
   overflow-y:scroll;
